# hyprclipx

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  hyprpm.toml
docs/: ARCH_HYPRCLIPX_PASTE.md  WRFL_HYPRCLIPX_RESTART.md
examples/: hyprclipx.toml
helpers/: clipman-client.py  clipman-daemon.py  clipman.service  get-caret-position.py
include/hyprclipx/: ClipboardEntry.hpp  ClipboardManager.hpp  ClipboardRenderer.hpp  Config.hpp  ConfigParser.hpp  Forward.hpp  Globals.hpp  IPCHandler.hpp
src/: ClipboardManager.cpp  ClipboardRenderer.cpp  ConfigParser.cpp  Globals.cpp  IPCHandler.cpp  main.cpp  main_ui.cpp
